<resources>
    <string name="app_name">Quality Sheet</string>
    <string name="action_settings">Settings</string>

    <string name="lbl_job_name">Select Job</string>
    <string name="lbl_enter_data">Enter Job Details</string>
    <string name="lbl_auditor_name">Select Auditor Name</string>
    <string name="lbl_row_number">Row Number</string>
    <string name="lbl_week_number">Select Week Number</string>
    <string name="lbl_house_number">Select House Number</string>
    <string name="permission_rationale">Please grant all permissions to proceed</string>

    <string name="noti_channel_id">tandg.qualitysheet</string>


    //---------------------COMMON--------------------------------
    <string name="lbl_worker_name">Name</string>
    <string name="lbl_comments_hint">Enter comments if needed</string>
    <string name="lbl_submit">Submit</string>
    <string name="lbl_yes">Pass</string>
    <string name="lbl_no">Fail</string>
    <string name="lbl_quality_display">Last Quality Percentage : </string>

    //-------------------CLIPPING-------------------------------
    <string name="lbl_clipping_data1">1) Clip position: not above a truss/one clip between truss/half twist <font fgcolor='#FFFF3B30'>(0)</font></string>
    <string name="lbl_clipping_data2">2) Broken heads and trusses <font fgcolor='#FFFF3B30'>(3 each)</font></string>
    <string name="lbl_clipping_data3">3) Broken heads replaced and bobbin hung <font fgcolor='#FFFF3B30'>(0)</font></string>
    <string name="lbl_clipping_data4">4) Laterals: take laterals from previous clip to the head, fail if larger than finger nail <font fgcolor='#FFFF3B30'>(3 each)</font></string>
    <string name="lbl_clipping_data5">5) Comments \neg: 10 broken heads, no half twist, clipping height poor, needs training</string>


    //-------------------DROPPING-------------------------------
    <string name="lbl_dropping_data1">1) Spacing: heads levelled and vines going down are spaced <font fgcolor='#FFFF3B30'>(0)</font></string>
    <string name="lbl_dropping_data2">2) Angle is correct - drop and shift the same - Cubes not ripped <font fgcolor='#FFFF3B30'>(3 each)</font></string>
    <string name="lbl_dropping_data3">3) Stems on the hoops, turning around properly <font fgcolor='#FFFF3B30'>(0)</font></string>
    <string name="lbl_dropping_data4">4) Minimize floor fruit and broken trusses <font fgcolor='#FFFF3B30'>(3 each)</font></string>
    <string name="lbl_dropping_data5">5) Comments \neg: vines are braided and bunchy but heads are levelled well, turning at the fronts/ backs needs improvement</string>

    //-------------------PRUNING-------------------------------
    <string name="lbl_pruning_data1">1) Accuracy: prune to the correct number and remove flag leaf + King fruit <font fgcolor='#FFFF3B30'>(3 each)</font></string>
    <string name="lbl_pruning_data2">2) Position of arch: proper <font fgcolor='#FFFF3B30'>(3 each)</font></string>
    <string name="lbl_pruning_data3">3) Pruning and arching at the right stage. Arch: as long as it fits and doesn\'t touch last bud <font fgcolor='#FFFF3B30'>(3 each)</font></string>
    <string name="lbl_pruning_data4">4) No broken trusses <font fgcolor='#FFFF3B30'>(3 each)</font></string>
    <string name="lbl_pruning_data5">5) Comments \neg: poor contact between arch and truss, arch too close fo the stem, pruning too hard</string>

    //-------------------TWISTING-------------------------------
    <string name="lbl_twisting_data1">1) Trusses and leaves not trapped, and not wound too much <font fgcolor='#FFFF3B30'>(0)</font></string>
    <string name="lbl_twisting_data2">2) Broken heads and trusses <font fgcolor='#FFFF3B30'>(3 each)</font></string>
    <string name="lbl_twisting_data3">3) Broken heads replaced and bobbin hung <font fgcolor='#FFFF3B30'>(0)</font></string>
    <string name="lbl_twisting_data4">4) Laterals: take laterals from previous twist to the head, fail if larger than finger nail <font fgcolor='#FFFF3B30'>(3 each)</font></string>
    <string name="lbl_twisting_data5">5) Comments \neg: 10 broken heads, twisting the wrong way, needs training, trusses cught under string</string>

    //-------------------DELEAFING-------------------------------
    <string name="lbl_deleafing_data1">1) Clean cut - minimize stubs and bad cuts <font fgcolor='#FFFF3B30'>(3 each)</font></string>
    <string name="lbl_deleafing_data2">2) Accuracy: correct range of leaves removed for whole line <font fgcolor='#FFFF3B30'>(3 each)</font></string>
    <string name="lbl_deleafing_data3">3) Stem and middle laterals taken, stems on hoops <font fgcolor='#FFFF3B30'>(3 each)</font></string>
    <string name="lbl_deleafing_data4">4) Laterals: no sliced fruit, minimizes broken trusses, dead plants reported <font fgcolor='#FFFF3B30'>(1 each)</font></string>
    <string name="lbl_deleafing_data5">5) Comments \neg: sent back to fix stubs, sliced through a stem, string not cut</string>

    //-------------------PICKING-------------------------------
    <string name="lbl_picking_data1">1) No floor fruit <font fgcolor='#FFFF3B30'>(0)</font></string>
    <string name="lbl_picking_data2">2) Colour stage and missing fruit <font fgcolor='#FFFF3B30'>(0)</font></string>
    <string name="lbl_picking_data3">3) Fruit graded out: rotten, damaged, miss-set <font fgcolor='#FFFF3B30'>(0)</font></string>
    <string name="lbl_picking_data4">4) No plant materials and calyx <font fgcolor='#FFFF3B30'>(0)</font></string>
    <string name="lbl_picking_data5">5) Comments \neg: 10 broken heads, no half twist, clipping height poor, needs training</string>

    //-------------------NAMES-------------------------------
    <array name="oha_names">
        <item>SELECT</item>
        <item>Ian Morley</item>
        <item>Bryan Morrison</item>
        <item>Donavin Robinson</item>
        <item>Grace Owens</item>
        <item>Lavinia Brown</item>
        <item>Nagma Nagma</item>
        <item>Neville Kuilan </item>
        <item>Stuart Thom</item>
        <item>Tania Khan</item>
        <item>Bobby Sadasiwan</item>
        <item>Marife Villaranda</item>
        <item>Joginder Paul</item>
        <item>Davinder Kaur</item>
        <item>Faleolo Taala</item>
        <item>Fransiska Natalia</item>
        <item>Maanvi Naicker</item>
        <item>Kiran Balar</item>
        <item>Terry Aukafolau</item>
        <item>Tevita Lanisi</item>
        <item>Sililo Nau</item>
        <item>Fanguna Moli</item>
        <item>Sitivene Filiai</item>
        <item>Johannes Kuhler</item>

    </array>

    //-------------------ADI-------------------------------
    <array name="adi_code">
        <item>SELECT</item>
        <item>91025</item>
        <item>91012</item>
        <item>91015</item>
        <item>91009</item>
        <item>95180</item>
        <item>95253</item>
        <item>92877</item>
        <item>91011</item>
        <item>91852</item>
        <item>97298</item>
        <item>96595</item>
        <item>95182</item>
        <item>95266</item>
        <item>14027</item>
        <item>98396</item>
        <item>99258</item>
        <item>99430</item>
        <item>11584</item>
        <item>92585</item>
        <item>92890</item>
        <item>92584</item>
        <item>97878</item>
        <item>99795</item>


    </array>





</resources>
